package com.events.core.domain.common;

public interface DomainEvent {
}
