package com.events.core.domain.common;

public class DomainEventMessageHeaders {

  public static final String AGGREGATE_TYPE = "aggregate-type";

  public static final String AGGREGATE_ID = "aggregate-id";

  public static final String DOMAIN_EVENT_TYPE = "domain-event-type";

  public static final String PARTITION_ID = "partition-id";
}
